test/function/error/argument_not_declared.c
void f(int a){
    printf("%d", a);
}

void main(){
    f(b);
}